force-app/main/default/objects/KT_Document_Generated__e/KT_Document_Generated__e.object-meta.xml
<CustomObject>
    <description>B4 platform event published when KT_DocumentGeneratorService creates a generated document and vault entry.</description>
    <label>KT Document Generated</label>
    <pluralLabel>KT Document Generated Events</pluralLabel>
</CustomObject>