force-app/main/default/objects/KT_Document_Generated__e/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <label>Document Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>