force-app/main/default/objects/KT_Document_Generated__e/fields/VaultId__c.field-meta.xml
<CustomField>
    <fullName>VaultId__c</fullName>
    <label>Vault Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>